--- a/pages/breadcrumbs.html
+++ b/pages/breadcrumbs.html
@@ -70,7 +70,7 @@
                     <h2>Когда использовать</h2>
                     <p>BreadCrumbs (навигационная цепочка) показывают путь от родительской страницы 
                         к текущей — той, на которой находится пользователь.</p>
-                    <div class="principlesBlock paddingTop28">
+                    <div class="principlesBlock paddingTop28 noGap">
                         <div class="whenToUseGreen whenToUseGreenBig">
                             <img src="../img//tick.svg">
                             <p>Используйте этот компонент, чтобы подсказать пользователям, где они находятся в структуре сайта или приложения, и помочь перемещаться между разными уровнями.</p>
