--- a/pages/checkbox.html
+++ b/pages/checkbox.html
@@ -117,9 +117,9 @@
                             <input class="customCheckbox errorCheckbox" type="checkbox" id="Error2">
                             <label class="customLabel" for="Error2">Детский билет</label>
                         </div>
-                        <div class="menuTab hugeMargin">
+                        <div class="menuTab ">
                             <input class="customCheckbox errorCheckbox" type="checkbox" id="Error3">
-                            <label class="customLabel" for="Error3">Обратный билет</label>
+                            <label class="customLabel zeroPadding" for="Error3" >Обратный билет</label>
                         </div>
                         <p class="incorrect">Выберите хотя бы один пункт</p>
                     </div>
