--- a/pages/colors.html
+++ b/pages/colors.html
@@ -45,7 +45,7 @@
                     <h1>Цвета</h1>
                     <div class="manyTexts">
                         <p>Цвета не только служат эстетической функцией, но и являются ключевыми элементами в структурировании информации и выделении важных смысловых акцентов. Важно следить за идентичностью цветов, так как они усиливают узнаваемость бренда и обеспечивают единообразие в визуальной коммуникации. </p>
-                        <p>Подобранная цветовая палитра помогает создать гармоничное визуальное восприятие, что важно не только для узнаваемости бренда, но и для удобства восприятия пользователей, обеспечивая им легкость в навигации и восприятии контента.</p>
+                        <p>Подобранная цветовая палитра помогает создать гармоничное визуальное восприятие, что важно не только для узнаваемости бренда, но и для удобства восприятия пользователей, обеспечивая им легкость в навигации<br>и восприятии контента.</p>
                         <p>Стандартизированная цветовая палитра состоит из трех: основной, нейтральной,  и цветов состояний. Каждая палитра выполняет определенные функции и имеет свое применение, которые можно найти в соответствующих разделах.</p>
                     </div>
                 </div>
@@ -252,7 +252,7 @@
                         </div>
                         <h3>Визуальная иерархия <br>с использованием нейтральных тонов</h3>
                         <p>Используйте более светлые нейтральные оттенки для элементов на поверхности, на которых хотите акцентировать внимание пользователя, чтобы обозначить основные элементы интерфейса и создать понятную иерархию. Это поможет показать пользователю, на что нужно обратить внимание и определить степень важности различных элементов дизайна.                        </p>
-                        <div class="marginTop8 beforeh3">
+                        <div class="marginTop8">
                             <img src="../img/colors3.svg" />
                         </div>
                     </div>
@@ -342,7 +342,7 @@
                             </div>
                         </div>
                     </div>
-                    <p class="paddingTop24">Например, предупреждения о предстоящих изменениях или несущественных проблемах.</p>
+                    <p class="paddingTop24">Предупреждение может быть использовано, например, для предупреждения<br>о предстоящих изменениях или несущественных проблемах.</p>
                     <div class=" paddingTop24 beforeh3">
                         <img src="../img/colorsAttention.svg" />
                     </div>
