--- a/pages/images.html
+++ b/pages/images.html
@@ -85,11 +85,11 @@
                             </li>
                             <li>
                                 <p class="aboutListHeader">PNG</p>
-                                <p class="aboutListText">Его можно использоваться также, как и webp, просто второй более новый и оптимизированный. Скорее всего, при использовании такого формата вы<br>не встретитесь с проблемами старых браузеров, поскольку png формат один из самых старых форматов изображений.</p>
+                                <p class="aboutListText">Его можно использоваться также, как и webp, просто второй более новый и оптимизированный. Скорее всего, при использовании такого формата вы не встретитесь с проблемами старых браузеров, поскольку png формат один из самых старых форматов изображений.</p>
                             </li>
                             <li>
                                 <p class="aboutListHeader">SVG</p>
-                                <p class="aboutListText">Векторный формат. Самые простые изображения, иконки, логотип: это все лучше делать в векторном формате. Иными словами, рекомендуется выбирать векторный формат взамен растрового, если есть такая возможность.</p>
+                                <p class="aboutListText">Векторный формат. Самые простые изображения, иконки, логотип: это все лучше делать в векторном формате. Иными словами, рекомендуется выбирать векторный формат взамен растрового, если есть<br>такая возможность.</p>
                             </li>
                         </ul>
                     </div>
