--- a/pages/input.html
+++ b/pages/input.html
@@ -87,22 +87,22 @@
                 <div class="contentBlock">
                     <h2>Название</h2>
                     <p>Название поля пишется с заглавной буквы.</p>
-                    <div class="exampleMenuWrapper inputWrapper">
-                        <div class="myInput">
+                    <div class="exampleMenuWrapper inputWrapper marginBot32" style="width: 320px;">
+                        <div class="myInput" style="width: 320px;">
                             <label for="exampleName">Название поля</label>
                             <input type="text" id="exampleName" placeholder="Подсказка">
                         </div>
                     </div>
                     <p>Называйте поле ввода существительным, указывающим что нужно ввести.</p>
                     <div class="manyInputsWrapper">
-                        <div class="inputNameWrapper ">
+                        <div class="marginTop24 inputNameWrapper ">
                             <span class="singleTabCaption correct">Правильно</span>
                             <div class="myInput">
                                 <label for="exampleCOrrect">Место жительства</label>
                                 <input type="text" id="exampleCOrrect" placeholder="Город">
                             </div>
                         </div>
-                        <div class="inputNameWrapper">
+                        <div class="marginTop24 inputNameWrapper ">
                             <span class="singleTabCaption incorrect">Неправильно</span>
                             <div class="myInput">
                                 <label for="exampleInCOrrect">Введите место жительства</label>
@@ -110,19 +110,19 @@
                             </div>
                         </div>
                     </div>
-                    <p class="paddingTop32">Не ставьте двоеточие после названия: без него все понятно, оно только создает 
+                    <p class="paddingTop36">Не ставьте двоеточие после названия: без него все понятно, оно только создает 
                         лишний визуальный шум.</p>
-                    <div class="inputNameWrapper">
+                    <div class="inputNameWrapper marginTop24">
                         <span class="singleTabCaption incorrect">Неправильно</span>
                         <div class="myInput">
                             <label for="exampleCOrrect2">Введите место жительства</label>
                             <input type="text" id="exampleCOrrect2" placeholder="Город">
                         </div>
                     </div>
-                    <p class="paddingTop32">Большинство полей ввода используют название. Название размещается сверху
+                    <p class="paddingTop36">Большинство полей ввода используют название. Название размещается сверху
                         (для форм, где требуется последовательное заполнение полей, например, регистрация) или слева (для форм, где заполняются всего несколько полей, например, настройки).</p>
                     <div class="incorrectInputName">
-                        <div class="inputNameWrapper">
+                        <div class="inputNameWrapper marginTop24">
                             <span class="singleTabCaption incorrect">Неправильно</span>
                             <div class="myInput">
                                 <input type="text" id="exampleCOrrect3" placeholder="Город">
