--- a/pages/modal.html
+++ b/pages/modal.html
@@ -75,7 +75,7 @@
                         <p>Используйте модальное окно для второстепенного содержимого страниц, которое требуется только в некоторых случаях, или для того, чтобы сосредоточить внимание пользователя на совершаемом действии.</p>
                         <p>Модальное окно появляется поверх страницы, затемняя ее. Это помогает сфокусировать внимание пользователя на конкретных действиях, не теряя при этом общий контекст.</p>
                     </div>
-                    <div class="principlesBlock" style="padding-top: 28px;">
+                    <div class="principlesBlock paddingTop28 noGap">
                         <div class="whenToUseGreen whenToUseGreenAverage">
                             <img src="../img//tick.svg">
                             <p>Заголовок должен быть кратким (1-3 слова) и являться названием процесса или объекта.</p>
