--- a/pages/radioButton.html
+++ b/pages/radioButton.html
@@ -101,7 +101,7 @@
 
                 <div class="contentBlock">
                     <h2>Когда использовать</h2>
-                    <div class="principlesBlock whenToUseRadio">
+                    <div class="principlesBlock whenToUseRadio noGap">
                         <div class="whenToUseGreen">
                             <img src="../img//tick.svg">
                             <p>Группа радиокнопок используется для выбора одного значения из нескольких.</p>
