--- a/pages/segmentedControl.html
+++ b/pages/segmentedControl.html
@@ -99,18 +99,8 @@
                         <p>Таб-кнопка при нажатии меняет цвет текста на белый и красится в Main_blue/100.</p>
                         <p>При наведении таб-кнопка окрашивается в Main_grey/40.</p>
                     </div>
-                    <div class="exampleMenuWrapper noCaptions greyBack">
-                        <div class="singleTabWrapper SegmentedControlWrapper whiteBack">
-                            <div class="menuTab SegmentedControl">
-                                <p class="selectedControl">Первый</p>
-                                <p>Второй</p>
-                                <p class="hoverControl">Третий</p>
-                            </div>
-                            <span class="singleTabCaption">Selected</span>
-                            <span class="singleTabCaption">Normal</span>
-                            <span class="singleTabCaption">Hover</span>
-                        </div>
-                    </div>
+                    <img src="../img/segmentedLast.svg">
+
                 </div>
 
             </div>
