--- a/pages/textarea.html
+++ b/pages/textarea.html
@@ -42,7 +42,7 @@
 
         <div class="page">
             <div class="mainContent">
-                <h1 class="beforeMenu">Input</h1>
+                <h1 class="beforeMenu">Textarea</h1>
                 <div class="contentBlock">
                     <div class="menuWrapper">
                         <div class="tab">
