--- a/pages/tooltip.html
+++ b/pages/tooltip.html
@@ -42,7 +42,7 @@
 
         <div class="page">
             <div class="mainContent">
-                <h1 class="beforeMenu">DatePicker</h1>
+                <h1 class="beforeMenu">Tooltip</h1>
                 <div class="contentBlock">
                     <div class="menuWrapper">
                         <div class="tab">
@@ -87,7 +87,7 @@
                             <img src="../img/tooltip2_2.svg">
                         </div>
 
-                        <li class="">поясняющее изображение с описанием.</li>
+                        <li class="paddingBot12">поясняющее изображение с описанием.</li>
                         <img src="../img/tooltip3.svg">
                     </ul>
                 </div>
