--- a/pages/typography.html
+++ b/pages/typography.html
@@ -54,14 +54,14 @@
                     </div>
                     <div class="manyTexts paddingBottom">
                         <P>Этот шрифт используются в 3 основных начертания:</P>
-                        <ul class="ulWithDashes marginBot20" >
+                        <ul class="ulWithDashes marginBot28" >
                             <li>Bold — для заголовков;</li>
                             <li>Medium — для акцентного шрифта;</li>
                             <li>Book  — для набора основного текста.</li>
                         </ul>
                     </div>
                     <div class="tabcontent typoMenu mainTypoWeight fullBorder" style="display: flex;" >
-                        <div class="mainTypoWrapper mainTypoExamples ">
+                        <div class="mainTypoWrapper1 mainTypoExamples ">
                             <div class="leftWrapper">
                                 <p>Font</p>
                                 <h1 class=" weight">Заголовок</h1>
@@ -160,10 +160,10 @@
                     <div class="exampleMenuWrapper paddingBot24 paddingTop28">
                         <img src="../img/typoText.svg" />
                     </div>
-                    <p class="beforeh3">Основные текстовые блоки набираются шрифтом начертания “book”. Чтобы виделить информацию используйте начертания ”bold” и “medium”. Старайтесь выделать частично и только минимальную информацию, избегайте выделения целых блоков.</p>
+                    <p class="beforeh3">Основные текстовые блоки набираются шрифтом начертания book. Чтобы виделить информацию используйте начертания bold и medium. Старайтесь выделать частично и только минимальную информацию, избегайте выделения целых блоков.</p>
                     <h3>Списки</h3>
                     <div class="manyTexts">
-                        <p>Списки состоят из связанного контента, сгруппированного и организованного вертикально. Чтобы показать вложенность элементов, делайте смещение кратное модулю.</p>
+                        <p>Списки состоят из связанного контента, сгруппированного и организованного вертикально. Чтобы показать вложенность элементов, делайте смещение<br>кратное модулю.</p>
                         <p>Для формирования маркерованного списка при использования списка, который начинается с числа или буквы без скобки, начинайте предложение с заглавной буквы и заканчиваете точкой. Если список начинается с числа со скобкой, то далее следует использовать слова с прописной буквы и использовать точку-запятую<br>для перечисления.</p>
                         <p>Если список предполагает следующее членение текста, то в конце него становится двоеточие. Если последующего членения не будет, то ставится точка.</p>
                     </div>
@@ -207,19 +207,17 @@
                     </div>
                     <div class="typoExampleWrapper beforeh3">
                         <div class="manyTexts">
-                            <p>«Сказав: “Goodbye”, Варвара</p>
+                            <p>«Сказав: “Goodbye”, Варвара очень</p>
                             <p>быстро вышла из комнаты.»</p>
                         </div>
                     </div>
 
                     <p class="pBold">Тире</p>
-                    <div class="manyTexts">
-                        <p>Есть два вида тире:</p>
-                        <ul class="ulWithDashes">
-                            <li>пунктуационное (длинное ­―), используется во всех пунктуационных случаях как знак препинания, выделяется пробелами;</li>
-                            <li>цифровое (короткое –), которое используется при обозначении диапазона дат или цифр, пробелами не выделяется.</li>
-                        </ul>
-                    </div>
+                    <p class="marginBot20">Есть два вида тире:</p>
+                    <ul class="ulWithDashes marginBot28">
+                        <li class="paddingBot16">пунктуационное (длинное ­―), используется во всех пунктуационных случаях как знак препинания, выделяется пробелами;</li>
+                        <li>цифровое (короткое –), которое используется при обозначении диапазона дат или цифр, пробелами не выделяется.</li>
+                    </ul>
                     <div class="typoExampleWrapper beforeh3">
                         <div class="manyTexts flexWow">
                             <p>Красноярск — Тула</p>
