--- a/index.html
+++ b/index.html
@@ -57,19 +57,19 @@
                 </div>
                 <div class="contentBlock" style="padding-bottom: 40px;">
                     <div class="principlesBlock">
-                        <img src="./img/about1.svg" onclick="window.location.href = '/pages/about.html'">
-                        <img src="./img/about2.svg" onclick="window.location.href = '/pages/colors.html'">
-                        <img src="./img/about3.svg" onclick="window.location.href = '/pages/typography.html'">
-                        <img src="./img/about4.svg" onclick="window.location.href = '/pages/layout.html'">
-                        <img src="./img/about5.svg" onclick="window.location.href = '/pages/tabs.html'">
-                        <img src="./img/about6.svg" onclick="window.location.href = '/pages/buttons.html'">
-                        <img src="./img/about7.svg" onclick="window.location.href = '/pages/images.html'">
-                        <img src="./img/about8.svg" onclick="window.location.href = '/pages/loading.html'">
+                        <img src="./img/about1.svg" onclick="window.location.href = './pages/about.html'">
+                        <img src="./img/about2.svg" onclick="window.location.href = './pages/colors.html'">
+                        <img src="./img/about3.svg" onclick="window.location.href = './pages/typography.html'">
+                        <img src="./img/about4.svg" onclick="window.location.href = './pages/layout.html'">
+                        <img src="./img/about5.svg" onclick="window.location.href = './pages/tabs.html'">
+                        <img src="./img/about6.svg" onclick="window.location.href = './pages/buttons.html'">
+                        <img src="./img/about7.svg" onclick="window.location.href = './pages/images.html'">
+                        <img src="./img/about8.svg" onclick="window.location.href = '/. pages/loading.html'">
                     </div>
                 </div>
                 <div class="contentBlock LinkBlock">
                     <img src="./img/figmaLogo.svg">
-                    <p class="pLink">Дизайн-система MEILE</a>
+                    <p class="pLink" onclick="window.location.href = 'https://www.figma.com/file/J3PAQy0cyd1QbQ9SkZKDGa/MEILE-%D0%B4%D0%B8%D0%B7%D0%B0%D0%B9%D0%BD-%D1%81%D0%B8%D1%81%D1%82%D0%B5%D0%BC%D0%B0?type=design&node-id=1113-10123&mode=design&t=ThsEKa6xUgtquiT2-0'">Дизайн-система MEILE</a>
                 </div>
             </div>
             <div id="footer">
