--- a/pages/steps.html
+++ b/pages/steps.html
@@ -42,7 +42,7 @@
 
         <div class="page">
             <div class="mainContent">
-                <h1 class="beforeMenu">Tags</h1>
+                <h1 class="beforeMenu">Steps</h1>
                 <div class="contentBlock">
                     <div class="menuWrapper">
                         <div class="tab">
