--- a/pages/tabs.html
+++ b/pages/tabs.html
@@ -85,7 +85,7 @@
                     <h2>Когда использовать</h2>
                     <p>Инструмент навигации — переключают разделы или типы контента на странице. 
                         Хорошо, если текст будет лаконичным, а табы — примерно одинаковой длины.</p>
-                    <div class="principlesBlock paddingTop28">
+                    <div class="principlesBlock paddingTop28 noGap">
                         <div class="whenToUseGreen">
                             <img src="../img//tick.svg">
                             <p >Табы группируют контент и помогают в навигации.</p>
