--- a/pages/toggle.html
+++ b/pages/toggle.html
@@ -43,7 +43,7 @@
 
         <div class="page">
             <div class="mainContent">
-                <h1 class="beforeMenu">DatePicker</h1>
+                <h1 class="beforeMenu">Toggle</h1>
                 <div class="contentBlock">
                     <div class="menuWrapper">
                         <div class="tab">
