small changes adfter lesson

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="./styles.css">
+        <title>MEILE</title>
     </head>
 
     <body>
@@ -36,7 +37,7 @@
                     <a class="secondLevel" id="navbarSecondtLevel6_13" href="./pages/select.html">Select</a>
                 </div>
                 <a class="firstLevel" id="navbarFirstLevel7" href="./pages/images.html">Изображения</a>
-                <a class="firstLevel" id="navbarFirstLevel8" href="./pages/loading.html">Загрузка контена</a>
+                <a class="firstLevel" id="navbarFirstLevel8" href="./pages/loading.html">Загрузка контента</a>
             </div>
         </div>
         <div class="page">
