--- a/pages/select.html
+++ b/pages/select.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <link rel="stylesheet" href="../styles.css">
+        <title>Select</title>
+
     </head>
 
     <body>
@@ -36,7 +38,7 @@
                     <a class="secondLevel activeSecondLevelSideNav" id="navbarSecondtLevel6_13" href="./select.html">Select</a>
                 </div> 
                 <a class="firstLevel" id="navbarFirstLevel7" href="./images.html">Изображения</a>
-                <a class="firstLevel" id="navbarFirstLevel8" href="./loading.html">Загрузка контена</a>
+                <a class="firstLevel" id="navbarFirstLevel8" href="./loading.html">Загрузка контента</a>
             </div>
         </div>
 
