--- a/pages/toggle.html
+++ b/pages/toggle.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <link rel="stylesheet" href="../styles.css">
+        <title>Toggle</title>
+
     </head>
 
     <body>
@@ -37,7 +39,7 @@
 
                 </div> 
                 <a class="firstLevel" id="navbarFirstLevel7" href="./images.html">Изображения</a>
-                <a class="firstLevel" id="navbarFirstLevel8" href="./loading.html">Загрузка контена</a>
+                <a class="firstLevel" id="navbarFirstLevel8" href="./loading.html">Загрузка контента</a>
             </div>
         </div>
 
