--- a/pages/typography.html
+++ b/pages/typography.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <link rel="stylesheet" href="../styles.css">
+        <title>Типографика</title>
+
     </head>
 
     <body>
@@ -36,7 +38,7 @@
                     <a class="secondLevel" id="navbarSecondtLevel6_13" href="./select.html">Select</a>
                 </div>  
                 <a class="firstLevel" id="navbarFirstLevel7" href="./images.html">Изображения</a>
-                <a class="firstLevel" id="navbarFirstLevel8" href="./loading.html">Загрузка контена</a>
+                <a class="firstLevel" id="navbarFirstLevel8" href="./loading.html">Загрузка контента</a>
             </div>
         </div>
 
@@ -208,7 +210,7 @@
                     <div class="typoExampleWrapper beforeh3">
                         <div class="manyTexts">
                             <p>«Сказав: “Goodbye”, Варвара очень</p>
-                            <p>быстро вышла из комнаты.»</p>
+                            <p style="margin-left: 10px;">быстро вышла из комнаты.»</p>
                         </div>
                     </div>
 
